fixed body overflow

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@ body{
   color: var(--beige);
 
   cursor: url('/src/cursors/dot.svg'), auto;
+
+  overflow: hidden;
 }
 
 .header{
